default/objects/Account_Price_Book__c/Account_Price_Book__c.object-meta.xml
<CustomObject>
    <description>Junction object to link existing Accounts to existing Price Books.</description>
    <label>Account Price Book</label>
    <nameField>
        <label>Account Price Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Price Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>