default/objects/Account_Price_Book__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Select Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Price Books</relationshipLabel>
    <relationshipName>Account_Price_Books</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>