default/objects/Account_Price_Book__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>