default/objects/Account_Price_Book__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Account Price Books</relationshipLabel>
    <relationshipName>Account_Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>